# ghactions_repo

./: .gitignore  README.md  flask_app.py  main.py  pyproject.toml
.github/workflows/: first-action.yml  test.yaml
GHActions/: pyproject.toml
tests/: TestMain.py  test_main.py
