[tool.poetry]
name = "poetry-sample-package"
version = "0.1.0"
description = "Learn how to use poetry"
authors = ["bartello88 <bartello88@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_sample_package"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
flask = "^3.0.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
