[tool.poetry]
name = "ghactions"
version = "0.1.0"
description = ""
authors = ["bartello88 <bartello88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "1.0"
python-dotenv = "1.0.0"
requests = "2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
